tests/test_files/errors/any3.over
arr1: [ ( [[   ]] [[ 2 ]] ) ]
arr2: [ ( [[ 2 ]] [[   ]] ) ]
arr3: [ ( [["c"]] [["c"]] ) ]

arr: arr1+arr2+arr3
